# http://www.linuxhacker.at/socketxx
IF(NOT SOCKETXX_NAMESPACE)
  SET(SOCKETXX_NAMESPACE "SOCKETXX")
  SET(SOCKETXX_STANDALONE 1)
ENDIF(NOT SOCKETXX_NAMESPACE)
# In all cases:
STRING(TOLOWER ${SOCKETXX_NAMESPACE} SOCKETXX_LIBRARY_NAME)

PROJECT(${SOCKETXX_NAMESPACE} CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(NOT SOCKETXX_INSTALL_BIN_DIR)
  SET(SOCKETXX_INSTALL_BIN_DIR "bin")
ENDIF(NOT SOCKETXX_INSTALL_BIN_DIR)
IF(NOT SOCKETXX_INSTALL_LIB_DIR)
  SET(SOCKETXX_INSTALL_LIB_DIR "lib")
ENDIF(NOT SOCKETXX_INSTALL_LIB_DIR)

# configure.in:LIBSOCKET_SO_VERSION
# LIBSOCKET_SO_VERSION=1:2:0
# SOCKET_VERSION=1.12.12

#-----------------------------------------------------------------------------
# SOCKETXX version number
SET(SOCKETXX_MAJOR_VERSION 1)
SET(SOCKETXX_MINOR_VERSION 2)
SET(SOCKETXX_BUILD_VERSION 0)
SET(SOCKETXX_VERSION
  "${SOCKETXX_MAJOR_VERSION}.${SOCKETXX_MINOR_VERSION}.${SOCKETXX_BUILD_VERSION}"
  )
SET(SOCKETXX_API_VERSION
  "${SOCKETXX_MAJOR_VERSION}.${SOCKETXX_MINOR_VERSION}"
  )
SET(SOCKETXX_LIBRARY_PROPERTIES
  VERSION "${SOCKETXX_VERSION}"
  SOVERSION "${SOCKETXX_API_VERSION}"
  )

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  )

#OPTION(BUILD_SHARED_LIBS "Build with shared libraries." ON)

add_subdirectory(socket++)
add_subdirectory(doc)
add_subdirectory(test) 


